<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_10_height"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10_height"
        android:text="@string/enter_your_phone_number_and_a_temporary_password_will_be_sended_to_your_phone"
        android:textColor="@color/blakcolor"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:visibility="visible"
        android:layout_margin="@dimen/_10_height"
        />

    <com.NativeTech.rehla.Utills.MyEditText
        android:id="@+id/phone"
        style="@style/etStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_phone_receiver"
        android:hint="@string/mobile_number"
        android:inputType="textEmailAddress"
         android:layout_margin="@dimen/_10_height"
        />
    <com.NativeTech.rehla.Utills.ButtonBold
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/dime_200"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
       style="@style/tvStyleBold"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:layout_margin="@dimen/_10_height"
        android:gravity="center"
        android:layout_gravity="center"
         android:textColor="@color/whitecolor"
         android:text="@string/send"
        android:background="@drawable/ride_status_green_2"
        />

</LinearLayout>
