<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/graycolor"
    android:alpha="0.7"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4_height"
        app:cardCornerRadius="10dp"
        >
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4_height"
            android:orientation="vertical"
            >
            <com.NativeTech.rehla.Utills.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone"
                android:padding="@dimen/_4_height"
                android:textColor="@color/kprogresshud_default_color"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <com.NativeTech.rehla.Utills.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_application_language"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/kprogresshud_default_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4_height"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_10_height"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:visibility="gone"
                android:background="@color/kprogresshud_grey_color"
                />
            <com.NativeTech.rehla.Utills.MyTextView
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45_height"
                android:text="@string/english"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/labanycolor"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/kprogresshud_grey_color"
                />
            <com.NativeTech.rehla.Utills.MyTextView
                android:id="@+id/arabic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45_height"
                android:text="@string/arabic"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/labanycolor"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
    <com.NativeTech.rehla.Utills.ButtonBold
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4_height"
        android:background="@drawable/button_shap_white"
        android:text="@string/cancel"
        android:padding="@dimen/_4_height"
        android:textColor="@color/labanycolor"
    />
</android.support.v7.widget.LinearLayoutCompat>