<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitecolor"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/app_color"
             >


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <com.NativeTech.rehla.Utills.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dime_15"
            android:text="@string/enter_confirmation_code_sended_to_your_phone_number"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="0.8"
            android:textColor="@color/gray_selected"

            />
        <com.NativeTech.rehla.Utills.MyEditText
            android:id="@+id/code"
            style="@style/etStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="@dimen/dime_15"
            android:textColorHint="@color/gray_unselected"
            />
        <com.NativeTech.rehla.Utills.ButtonBold
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginTop="@dimen/dime_15"
            android:layout_gravity="center"
            android:minWidth="@dimen/dime_175"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            style="?android:attr/borderlessButtonStyle"
             android:textColor="@color/whitecolor"
            android:text="@string/send"
            android:background="@drawable/ride_status_green_2"
            />
        <com.NativeTech.rehla.Utills.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_get_verification_code"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:gravity="center"
            android:layout_marginTop="@dimen/dime_10"
             android:textColor="@color/gray_unselected"
             />
        <com.NativeTech.rehla.Utills.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_again"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"

            android:layout_marginTop="@dimen/dime_10"
             android:textColor="@color/app_color"
             />
        <com.NativeTech.rehla.Utills.MyTextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginTop="@dimen/dime_10"
             android:textColor="@color/app_color"
            />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>